# road-signs-locator

./: README.md  mapping.ipynb  pyproject.toml
gps_emitter/: gps_trace_emitter.py  road_sign_emitter.py
sign_locator/: sign_locator.py
validation/: validate.py
